# cni-project

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml  server.py  test.ipynb
backend/src/cni_analyzer/: __main__.py  compare.py  detector.py  prepare.py  signature.py
backend/src/cni_analyzer/adaface/: inference.py  net.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/verify/: CameraCapture.tsx  CameraView.tsx  CaptureCard.tsx  ElegantLoader.tsx  ResultPanel.tsx  SignaturePad.tsx  VerificationPage.tsx  masks.tsx  types.ts
frontend/src/lib/: api.ts  image.ts
